<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sl_sec2_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/bt_perc_calculate"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sl_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_perc_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/sl_from_input"
        app:layout_constraintStart_toStartOf="@+id/section_label"
        app:layout_constraintTop_toBottomOf="@+id/section_label" />

    <TextView
        android:id="@+id/tv_perc_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:text="@string/sl_to_input"
        app:layout_constraintStart_toStartOf="@+id/section_label"
        app:layout_constraintTop_toBottomOf="@+id/section_label" />

    <TextView
        android:id="@+id/tv_label_perc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="200dp"
        android:text="@string/sl_answer"
        app:layout_constraintStart_toStartOf="@+id/section_label"
        app:layout_constraintTop_toBottomOf="@+id/section_label" />

    <EditText
        android:id="@+id/et_perc_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter % From"
        android:inputType="numberSigned|numberDecimal"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="@+id/tv_perc_from"
        app:layout_constraintTop_toBottomOf="@+id/tv_perc_from" />

    <EditText
        android:id="@+id/et_perc_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter % To"
        android:inputType="numberSigned|numberDecimal"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="@+id/tv_perc_to"
        app:layout_constraintTop_toBottomOf="@+id/tv_perc_to" />

    <TextView
        android:id="@+id/tv_perc_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:gravity="left"
        android:text="@string/sl_default_perc"
        android:textColor="@color/underWeight"
        android:textDirection="locale"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_perc_label"
        app:layout_constraintStart_toEndOf="@+id/tv_label_perc_label" />


</android.support.constraint.ConstraintLayout>