<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainbmiviewmodel"
            type="com.example.v2.cp411app2.MainBmiViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainBMIFragment">

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/sl_sec4_label"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/bt_computeBmi"
            android:layout_width="114dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/bt_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="56dp"
            android:text="@string/sl_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section_label" />

        <TextView
            android:id="@+id/tv_feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:text="@string/sl_feet"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_feet" />

        <TextView
            android:id="@+id/tv_inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:text="@string/sl_inches"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_inches" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="140dp"
            android:text="@string/sl_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section_label" />

        <TextView
            android:id="@+id/tv_pound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:text="@string/sl_pounds"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pound" />

        <TextView
            android:id="@+id/tv_label_yourbmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="212dp"
            android:text="@string/sl_yourBmi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section_label" />

        <EditText
            android:id="@+id/et_feet"
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:maxLength="2"
            android:hint="Feet"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:onTextChanged="@{(s,start,before,count)->mainbmiviewmodel.onFeet(s)}"
            app:layout_constraintStart_toEndOf="@+id/tv_height"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_pound"
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:maxLength="3"
            android:hint="lb"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:onTextChanged="@{(s,start,before,count)->mainbmiviewmodel.onPound(s)}"
            app:layout_constraintStart_toEndOf="@+id/tv_height"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_inches"
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:maxLength="2"
            android:hint="Inches"
            android:onTextChanged="@{(s,start,before,count)->mainbmiviewmodel.onInches(s)}"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/tv_height"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_yourBmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:gravity="left"
            android:text="@{Double.toString(mainbmiviewmodel.resultBMI)}"
            android:textDirection="locale"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_yourbmi"
            app:layout_constraintStart_toEndOf="@+id/tv_label_yourbmi" />

        <TextView
            android:id="@+id/tv_statusBMI"
            android:layout_width="112dp"
            android:layout_height="33dp"
            android:layout_marginStart="148dp"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:visibility="visible"
            app:bmiStatus="@{mainbmiviewmodel.statusBMI}"
            app:hideIfZero="@{mainbmiviewmodel.resultBMI}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_yourBmi"
            app:layout_constraintStart_toEndOf="@+id/tv_height" />

        <Spinner
            android:id="@+id/spinner_profile"
            android:layout_width="183dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013" />

    </android.support.constraint.ConstraintLayout>
</layout>