<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/section_labe3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sl_sec3_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/bt_compute_frac"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sl_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nom1"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edittext_rounded_corners_border"
        android:ems="10"
        android:hint="Num 1"
        android:inputType="numberSigned"
        android:maxLength="8"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/section_labe3"
        app:layout_constraintTop_toBottomOf="@+id/section_labe3" />

    <EditText
        android:id="@+id/et_nom2"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_rounded_corners_border"
        android:ems="10"
        android:hint="Num 2"
        android:inputType="numberSigned"
        android:maxLength="8"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/bt_compute_frac"
        app:layout_constraintTop_toTopOf="@+id/et_nom1" />

    <EditText
        android:id="@+id/et_denom1"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edittext_rounded_corners_border"
        android:ems="10"
        android:hint="Denom 1"
        android:inputType="numberSigned"
        android:maxLength="8"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/et_nom1"
        app:layout_constraintTop_toTopOf="@+id/et_nom1" />

    <EditText
        android:id="@+id/et_denom2"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_rounded_corners_border"
        android:ems="10"
        android:hint="Denom 2"
        android:inputType="numberSigned"
        android:maxLength="8"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/bt_compute_frac"
        app:layout_constraintTop_toTopOf="@+id/et_nom1" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/et_denom1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nom1"
        app:layout_constraintVertical_bias="0.312" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/et_denom2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nom2"
        app:layout_constraintVertical_bias="0.312" />

    <Spinner
        android:id="@+id/spinner_sign"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_frac_result"
        android:layout_width="308dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/edittext_rounded_corners_border"
        android:gravity="center"
        android:text="@string/sl_invalid_feet"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/section_labe3"
        app:layout_constraintTop_toBottomOf="@+id/section_labe3" />

</android.support.constraint.ConstraintLayout>